2005-06-18  Naba Kumar  <naba@gnome.org>

	* plugins/profile-default/plugin.c: Fixed error when loading another
	project while a project is still loaded.
	
	* plugins/project-manager/plugin.c: Used (newly added) group-activated
	signal from gnome-build to popup group properties.
	
	* src/anjuta.c: Load default session by default.

	* po/POTFILES.in: Added missing files.
	
	* libanjuta/anjuta-plugin.[ch], libanjuta/plugins.[ch]: Do not
	activate plugin on load (activate it separately). Connect to activate
	and deactivate signals for housekeeping, so that if plugins are
	activated or deactivate externally, they are properly recorded.
	
	* plugins/profile-default/plugin.c: Save profile before a project
	is loaded so that it could be restored when project is closed.
	
	* plugins/file-loader/plugin.c: Fixed ok/cancel buttons order.

2005-06-17  Naba Kumar  <naba@gnome.org>

	* plugins/profile-default/plugin.h, plugins/profile-default/plugin.c,
	libanjuta/plugins.c, libanjuta/plugins.h: Implmented profile saving
	for project. The plugins loaded for the project is restored when project
	is loaded next time.
	
	* TODO.tasks: Updated.
	
2005-06-15  Naba Kumar  <naba@gnome.org>

	* plugins/tools/scripts/find-fixmes.pl,
	(new) plugins/tools/scripts/translation-status.pl,
	plugins/tools/scripts/tools-2.xml.in,
	plugins/tools/scripts/Makefile.am,
	plugins/tools/scripts/prepare-changelog.pl: Added translation
	status script. Completed find-fixmes.pl script. Fixed bugs.

	* plugins/tools/scripts/tools-2.xml.in: Fixed prepare-changelog
	tool path.

2005-06-14  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* plugins/message-view/anjuta-message-manager-plugin.glade :
	renamed "messages.tag.position" to "messages.tab.position".
	plugins/message-view/anjuta-msgman.c : 
	Messages tab position prefrences.
	
2005-06-14  Naba Kumar  <naba@gnome.org>

	* (new) plugins/tools/scripts/find-fixmes.pl,
	(new) plugins/tools/scripts/tools-2.xml.in,