@@ -184,6 +184,8 @@ project_import_finalize(GObject *object)
 	
 	gtk_widget_destroy(cobj->window);
 	
+	/* Deactivate plugin once wizard is finished */
+	anjuta_plugin_deactivate (cobj->plugin);
 	G_OBJECT_CLASS(parent_class)->finalize(object);
 }
 
