@@ -1,3 +1,10 @@
+2005-06-19  Naba Kumar  <naba@gnome.org>
+
+	* global_tags/create_global_tags.sh: Fixed sh incompatibility bug.
+	Fixed warning.
+	
+	* plugins/project-import/project-import.c: Deactivate plugin when done.
+	
 2005-06-18  Naba Kumar  <naba@gnome.org>
 
 	* plugins/profile-default/plugin.c: Fixed error when loading another
